[build-system]
requires = ["setuptools>=68,<82"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-provider-cloudflare"
version = "0.1.0"
description = "Standalone Cloudflare Workers AI model-provider plugin for Hermes Agent"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Michael Sitarzewski"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/agentpip/hermes-provider-cloudflare"
Repository = "https://github.com/agentpip/hermes-provider-cloudflare"
Issues = "https://github.com/agentpip/hermes-provider-cloudflare/issues"

[project.optional-dependencies]
dev = [
  "build>=1.3,<2",
  "pytest>=9,<10",
  "ruff>=0.15,<1",
]

[project.entry-points."hermes_agent.model_providers"]
cloudflare = "hermes_provider_cloudflare:register"

[tool.setuptools.packages.find]
include = ["hermes_provider_cloudflare*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
